# ncs-hls

./: CMakeLists.txt  README.md  prj.conf
src/: CMakeLists.txt  main.c
src/drivers/: CMakeLists.txt  led.c  led.h
src/services/: CMakeLists.txt  hls.c  hls.h
tests/: run.sh
tests/drivers/led/: CMakeLists.txt  testcase.yaml
tests/drivers/led/src/: led_test.c
tests/led/: CMakeLists.txt
tests/services/hls/: CMakeLists.txt  testcase.yaml
tests/services/hls/src/: gatt.h  hls_test.c
